no margin on body to avoid scrollbars

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* main.css */
 body{
+	margin: 0;
 	font-family: 'Source Code Pro', sans-serif;
 	text-align: center;
 }
